<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/materialGrey"
    tools:context=".TimeToSleepFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/time_to_sleep"
                    android:textColor="@color/white"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/days_of_the_week"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="pon, wt, sr, czw, pt, sob, nie"
                    android:textColor="@color/grey" />
            </LinearLayout>

            <Switch
                android:id="@+id/isSet"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_weight="1" />
        </LinearLayout>

        <View
            android:id="@+id/divider5"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/greyOrange" />

        <View
            android:id="@+id/divider9"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/greyOrange" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/time_to_sleep"
                    android:textColor="@color/colorAccent"
                    android:textSize="18dp" />

                <Button
                    android:id="@+id/time_to_sleep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/materialGrey"
                    android:text="23:35"
                    android:textColor="@color/white"
                    android:textSize="38dp" />
            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">
            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sleep"
                android:textColor="@color/grey"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/sleep_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="8h"
                android:textColor="@color/grey"
                android:textSize="18dp" />
            </LinearLayout>
            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wake_up"
                    android:textColor="@color/yellow"
                    android:textSize="18dp" />

                <Button
                    android:id="@+id/alarm_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/materialGrey"
                    android:text="06:45"
                    android:textColor="@color/white"
                    android:textSize="38dp" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:id="@+id/divider10"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/greyOrange" />

        <View
            android:id="@+id/divider11"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/greyOrange" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/days_of_week"
            android:textColor="@color/grey"
            android:textSize="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/greyOrange"
                android:text="@string/monday"
                android:textColor="@color/colorAccent" />

            <Button
                android:id="@+id/tuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/greyOrange"
                android:text="@string/tuesday"
                android:textColor="@color/colorAccent" />

            <Button
                android:id="@+id/wednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/greyOrange"
                android:text="@string/wednesday"
                android:textColor="@color/colorAccent" />

            <Button
                android:id="@+id/thursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/greyOrange"
                android:text="@string/thursday"
                android:textColor="@color/colorAccent" />

            <Button
                android:id="@+id/friday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/greyOrange"
                android:text="@string/friday"
                android:textColor="@color/colorAccent" />

            <Button
                android:id="@+id/saturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/greyOrange"
                android:text="@string/saturday"
                android:textColor="@color/colorAccent" />

            <Button
                android:id="@+id/sunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/greyOrange"
                android:text="@string/sunday"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

        <View
            android:id="@+id/divider8"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/greyOrange" />

    </LinearLayout>

</FrameLayout>