<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity"
    android:background="@color/materialGrey">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/materialGrey"
        android:paddingTop="1dp"
        android:paddingBottom="1dp"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:background="@color/greyOrange"
            app:tabIconTint="@drawable/color_selector"
            app:tabIndicatorColor="@color/greyOrange"
            app:tabSelectedTextColor="@color/colorAccent"
            app:tabTextAppearance="@style/MyCustomTextAppearance"
            app:tabTextColor="@color/grey"
            app:tabPaddingStart="-1dp"
            app:tabPaddingEnd="-1dp">

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@android:drawable/ic_menu_mapmode"
                android:text="@string/clocks" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@android:drawable/ic_lock_idle_alarm"
                android:text="@string/alarm" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@android:drawable/ic_menu_recent_history"
                android:text="@string/time_to_sleep" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@android:drawable/ic_menu_mylocation"
                android:text="@string/wake_me_up_here_string" />

        </android.support.design.widget.TabLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</android.support.design.widget.CoordinatorLayout>