<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/materialGrey">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="18dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/do_you_want_to_delete_clock"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="11dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/DeleteClock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/materialGrey"
                android:text="@string/delete"
                android:textColor="@color/red" />

            <Button
                android:id="@+id/CancelDeletion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/materialGrey"
                android:text="@string/cancel"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>