<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/materialGrey">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/greyOrange"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:background="@color/greyOrange"
                android:paddingRight="15dp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/add_alarm"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textFontWeight="bold"
                android:textSize="18dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:background="@color/greyOrange"
                android:paddingLeft="15dp"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

        <TimePicker
            android:id="@+id/timePicker1"
            android:theme="@style/MyTimePickerDialogStyle"
            style="@style/MyTimePickerDialogStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:amPmTextColor="@color/white"
            android:numbersTextColor="@color/white"
            android:timePickerMode="spinner" />

        <View
            android:id="@+id/divider15"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/materialGrey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/greyOrange"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/etiquette"
                android:textColor="@color/white"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Alarm"
                android:textColor="@color/grey" />
        </LinearLayout>

        <View
            android:id="@+id/divider16"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/materialGrey" />

        <Button
            android:id="@+id/removeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/greyOrange"
            android:text="@string/delete_alarm"
            android:textAllCaps="false"
            android:textColor="@color/red" />

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/materialGrey" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>